[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/ui/themes/dark/search.svg" type="Texture" id=1]
[ext_resource path="res://code/ui/common/texts/hint.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/fonts/notosansjp_regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ui/fonts/lato_regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/ui/fonts/notosansjp_bold.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/ui/fonts/lato_bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://code/ui/common/texts/title.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/ui/mask.png" type="Texture" id=8]
[ext_resource path="res://code/ui/common/buttons/history.tscn" type="PackedScene" id=9]
[ext_resource path="res://code/ui/pages/games/scripts/game.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 14
use_filter = true
font_data = ExtResource( 6 )
fallback/0 = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 14
use_filter = true
font_data = ExtResource( 4 )
fallback/0 = ExtResource( 3 )

[node name="Game" type="VBoxContainer"]
anchor_right = 1.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( -182, -51 )
custom_constants/separation = 16
script = ExtResource( 10 )

[node name="Title" parent="." instance=ExtResource( 7 )]
anchor_right = 0.0
margin_right = 512.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Game"

[node name="Options" type="HBoxContainer" parent="."]
margin_top = 33.0
margin_right = 512.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( -293, -320 )
custom_constants/separation = 8

[node name="Input" type="LineEdit" parent="Options"]
margin_right = 476.0
margin_bottom = 28.0
size_flags_horizontal = 3
right_icon = ExtResource( 8 )
placeholder_text = "Type here to find a game"
caret_blink = true
caret_blink_speed = 0.5

[node name="Icon" type="TextureRect" parent="Options/Input"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -27.0
margin_right = -3.0
rect_min_size = Vector2( 24, 24 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="List" parent="Options" instance=ExtResource( 9 )]
margin_left = 484.0
margin_right = 512.0
margin_bottom = 28.0

[node name="Results" type="ItemList" parent="."]
visible = false
margin_top = 79.0
margin_right = 512.0
margin_bottom = 466.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "Item 0", null, false, "Item 1", null, false, "Item 2", null, false, "Item 3", null, false, "Item 4", null, false, "Item 5", null, false, "Item 6", null, false, "Item 7", null, false, "Item 8", null, false, "Item 9", null, false, "Item 10", null, false, "Item 11", null, false, "Item 12", null, false, "Item 13", null, false, "Item 14", null, false, "Item 15", null, false, "Item 16", null, false, "Item 17", null, false, "Item 18", null, false, "Item 19", null, false, "Item 20", null, false ]
auto_height = true

[node name="Hint" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 77.0
margin_right = 512.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 3 )
text = "You have not selected a game. Only your console name will be displayed."

[node name="Separator" type="HSeparator" parent="."]
margin_top = 110.0
margin_right = 512.0
margin_bottom = 142.0
custom_constants/separation = 32

[connection signal="focus_exited" from="Options/Input" to="." method="_on_Input_focus_exited"]
[connection signal="text_changed" from="Options/Input" to="." method="_on_Input_text_changed"]
[connection signal="text_entered" from="Options/Input" to="." method="_on_Input_text_entered"]
[connection signal="focus_exited" from="Results" to="." method="_on_Results_focus_exited"]
[connection signal="item_activated" from="Results" to="." method="_on_Results_item_activated"]
[connection signal="mouse_entered" from="Results" to="." method="_on_Results_mouse_entered"]
[connection signal="mouse_exited" from="Results" to="." method="_on_Results_mouse_exited"]
